--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "express-list-endpoints": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
